--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ header {
     height: 90px;
 }
 
+.header-link {
+    display: flex;
+    align-items: center;
+}
+
 h1 {
     color: #901C1C;
     margin-right: 100px;
@@ -24,11 +29,17 @@ h1 {
     margin-left: 100px;
 }
 
+.main-home {
+    display: flex;
+    justify-content: center;
+}
+
 .photographer_section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
-    margin-top: 100px;
+    margin-top: 50px;
+    max-width: 1440px;
 }
 
 .photographer_section article {
@@ -39,12 +50,108 @@ h1 {
     flex-direction: column;
 }
 
-.photographer_section article h2 {
-    color: #D3573C;
-    font-size: 36px;
+.photographer-redirect {
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.photographer_section article img {
+.photographer-name {
+    color: #D3573C;
+    font-size: 36px;
+    font-weight: 400;
+    margin: 0;
+    margin-top: 5px;
+}
+
+.photographer-picture {
     height: 200px;
     width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0px 4px 12px #a1a1a1;
+}
+
+.photographer-location {
+    color: #901C1C;
+    font-size: 13px;
+    margin: 0;
+}
+
+.photographer-description {
+    margin: 0;
+    margin-top: 3px;
+    font-size: 10px;
+}
+
+.photographer-price {
+    color: #757575;
+    font-size: 9px;
+    margin: 0;
+    margin-top: 2px;
+}
+
+.photograph-header {
+    height: fit-content;
+    display: grid;
+    grid-template-columns: 35% 30% 35%;
+    padding: 40px;
+}
+.detail-photogrpaher-text {
+    grid-column: 1/2;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.detail-img {
+    grid-column: 3/4;
+    grid-row: 1;
+    justify-content: center;
+}
+.detail-photographer-name {
+    color: #D3573C;
+    font-size: 50px;
+    margin: 0;
+}
+.detail-photographer-location {
+    color: #901C1C;
+    font-size: 22px;
+    margin: 0;
+}
+.detail-photographer-description {
+    color: #525252;
+    font-size: 18px;
+    margin: 0;
+}
+.centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.image-container {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+}
+.main-photographer {
+    display: flex;
+    flex-direction: column;
+}
+.media-collection-item {
+    width: 350px;
+    height: 300px;
+    object-fit: cover;
+}
+.media-collection {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 50px 100px;
+    place-items: center;
+}
+.media-collection-item-description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
