--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("photographer.css");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 
 body {
     font-family: "DM Sans", sans-serif;
@@ -143,15 +144,49 @@ h1 {
     width: 350px;
     height: 300px;
     object-fit: cover;
+    border-radius: 5px;
 }
 .media-collection {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin: 50px 100px;
+    margin: 50px 100px 20px 100px;
     place-items: center;
 }
 .media-collection-item-description {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: #901C1C;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+.media-item-like {
+    font-weight: 500;
+    margin-right: 5px;
+    margin-top: 10px;
+}
+.media-title {
+    margin-top: 10px;
+}
+.info-collection {
+    height: 70px;
+    width: 350px;
+    position: sticky;
+    bottom: 0;
+    left: 80%;
+    background-color: #DB8876;
+}
+.like-container {
+    display: flex;
+    align-items: center;
+}
+.like-container > a {
+    margin-bottom: 13px;
+}
+.bi-heart-fill {
+    color: #901C1C;
+}
+.info-collection {
+    font-size: 22px;
+    text-align: center;
 }
