--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,5 +1,13 @@
 #contact_modal {
+    z-index: 4;
     display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
 }
 
 .photograph-header {
@@ -32,11 +40,13 @@
     justify-content: space-between;
     padding: 35px;
     margin: auto;
+    margin-top: 100px;
 }
 
 .modal header {
     justify-content: space-between;
     width: 100%;
+    margin: 20px 0px 50px 0px;
 }
 
 .modal header img {
@@ -46,7 +56,7 @@
 .modal header h2 {
     font-size: 64px;
     font-weight: normal;
-    text-align: center;
+    text-align: left;
 }
 
 form {
@@ -71,7 +81,30 @@ form div {
 
 form input {
     width: 100%;
-    height: 68px;
+    height: 38px;
+    padding: 15px 3px;
     border: none;
     border-radius: 5px;
+    font-size: 24px;
+}
+
+#lightbox_bg {
+    z-index: 4;
+    display: none;
+    position: fixed;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+}
+
+.slide-image {
+    width: 1050px;
+    height: 900px;
+    object-fit: cover;
 }
