--- a/css/photographer.css
+++ b/css/photographer.css
@@ -40,7 +40,7 @@
     justify-content: space-between;
     padding: 35px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 2%;
 }
 
 .modal header {
@@ -100,11 +100,66 @@ form input {
     width: 100%;
     height: 100%;
     background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4); 
+    background-color: rgba(0, 0, 0, 0.856); 
 }
 
 .slide-image {
-    width: 1050px;
-    height: 900px;
+    width: 70vw;
+    height: 87vh;
     object-fit: cover;
+}
+.btn-close-lightbox {
+    position: absolute;
+    top: auto;
+    right: 11%;
+}
+.slider-next-option {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 11%;
+    top: 43%;
+}
+.slider-prev-option {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    left: 11%;
+    top: 43%;
+}
+.lightbox-info {
+    color: #901C1C;
+    font-size: 24px;
+}
+.lightbox-info p {
+    margin: 0;
+}
+
+.bi-heart-fill {
+    color: #901C1C;
+}
+.info-collection {
+    height: 70px;
+    width: 290px;
+    position: sticky;
+    bottom: 0;
+    left: 80%;
+    background-color: #DB8876;
+}
+.info-container {
+    font-size: 24px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.likes-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.likes-info p {
+    margin-right: 5px;
+}
+.likes-info .bi {
+    color: black;
+    margin-bottom: 5px;
 }
